# simple-glfw

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  annotated.html  classes.html  classgdk_1_1glfw__window-members.html  classgdk_1_1glfw__window.html  classgdk_1_1window-members.html  classgdk_1_1window.html  cmake_install.cmake  dir_1408713fc6f8475a4f2246e9802ae6be.html  dir_d074ae38dd914ed77ea4732049583e90.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxy.config  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  glfw__window_8h_source.html  index.html  menudata.js  structgdk_1_1glfw__window_1_1icon__image__type-members.html  structgdk_1_1glfw__window_1_1icon__image__type.html  structgdk_1_1window_1_1icon__image__type-members.html  structgdk_1_1window_1_1icon__image__type.html  window_8h_source.html
demo/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt
impl/glfw/src/: glfw_window.cpp
include/gdk/: glfw_window.h  window.h
include/jfc/: glfw_window.h  window.h  window_glfw.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: glfw_window.cpp  window.cpp
test/: CMakeLists.txt  glfw_window_test.cpp  window_test.cpp
