# © 2019 Joseph Cameron - All Rights Reserved

cmake_minimum_required(VERSION 3.9 FATAL_ERROR)

include("${CMAKE_CURRENT_SOURCE_DIR}/jfc-cmake/jfclib.cmake")

option(JFC_BUILD_DEMO "Build the demo" ON)
option(JFC_BUILD_DOCS "Build documentation" ON)
option(JFC_BUILD_TESTS "Build unit tests" ON)

add_subdirectory(thirdparty)

jfc_project(library
    NAME "simpleglfw"
    VERSION 0.0
    DESCRIPTION "cpp wrapper for glfw"
    C++_STANDARD 17
    C_STANDARD 90
    TYPE STATIC

    PUBLIC_INCLUDE_DIRECTORIES
        ${CMAKE_CURRENT_SOURCE_DIR}/include

        ${gdkmath_INCLUDE_DIRECTORIES} 

        ${GLEW_INCLUDE_DIR} # not currently used. must fix glfw/glew entanglement
        ${glfw_INCLUDE_DIR} # this was required on windows to get access to glew. This is a good reason to separate the two # TODO: SEPARATE GLFW from GLEW

    PRIVATE_INCLUDE_DIRECTORIES
        ${CMAKE_CURRENT_SOURCE_DIR}/src/include

        ${stb_INCLUDE_DIR}
        ${nlohmann_INCLUDE_DIR}

    LIBRARIES
        ${gdkmath_LIBRARIES}

        ${GLEW_LIBRARIES} # not currently used. must fix glfw/glew entanglement
        ${glfw_LIBRARIES} # Separate GLEW, you fool

    DEPENDENCIES
        "glfw"

    SOURCE_LIST
        ${CMAKE_CURRENT_SOURCE_DIR}/src/window.cpp 
)

if (JFC_BUILD_DEMO)
    add_subdirectory(demo)
endif()

if (JFC_BUILD_TESTS)
    add_subdirectory(test)
endif()

if (JFC_BUILD_DOCS)
    add_subdirectory(docs)
endif()

